--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <title>Mkondo</title>
     <!-- CSS only -->
     <link rel="stylesheet" href="bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css" integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css" integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;700&family=Roboto&display=swap" rel="stylesheet">
-    <script data-ad-client="ca-pub-1318997707401943" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script type="module" data-ad-client="ca-pub-1318997707401943" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
     <!-- Here 👇 -->
     <div id="root"></div>
-    <script nomodule src="./index.js"></script>
+    <script type="module" nomodule src="./index.js"></script>
     <!-- This script tag will get a reference to the esmodule bundle -->
     <script type="module" src="./index.js"></script>
 </body>
